--- a/mystyle1.css
+++ b/mystyle1.css
@@ -1,5 +1,5 @@
-th.important{color:red;}
-th,td{border:dashed thick black}
+th.important{color:blue;}
+th,td,h2{border:double 6px #33ffff;}
 
 p.sample1{border:double 10px#0000ff;}
 p.sample2{border:inset 10px#ff0000;}
@@ -7,3 +7,4 @@ p.sample3{margin:30px 30px;padding: 10px;border:medium solid #ff00ff;}
 
 <!-- h1{color:blue;} -->
 h1 {color:#F0A050;}
+ 
