--- a/mystyle1.css
+++ b/mystyle1.css
@@ -1,10 +1,42 @@
-th.important{color:blue;}
-th,td,h2{border:double 6px #33ffff;}
+body {
+   text-align: center;
+}
 
-p.sample1{border:double 10px#0000ff;}
-p.sample2{border:inset 10px#ff0000;}
-p.sample3{margin:30px 30px;padding: 10px;border:medium solid #ff00ff;}
+body {
+  background-color: #FFFF99;
+}
 
-<!-- h1{color:blue;} -->
-h1 {color:#F0A050;}
- 
+
+
+th.important {
+  color: blue;
+}
+table {margin-left:auto;margin-right:auto;}
+
+th,
+td,
+h2 {
+  border: double 6px #33ffff;
+}
+
+p.sample1 {
+  border: double 10px#0000ff;
+}
+
+p.sample2 {
+  border: inset 10px#ff0000;
+}
+
+p.sample3 {
+  margin: 30px 30px;
+  padding: 10px;
+  border: medium solid #ff00ff;
+}
+
+<!-- h1 {
+  color: blue;
+}
+
+-->h1 {
+  color: #F0A050;
+}
